k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nasa-apod-github-readme
  labels:
    name: nasa-apod-github-readme
