k8s/manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nasa-apod-github-readme
  namespace: nasa-apod-github-readme
  labels:
    app: nasa-apod-github-readme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nasa-apod-github-readme
  template:
    metadata:
      labels:
        app: nasa-apod-github-readme
    spec:
      containers:
      - name: nasa-apod-github-readme
        image: ghcr.io/onlivio/nasa-apod-github-readme:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: onlivio-ghcr
