k8s/manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nasa-apod-github-readme
  namespace: nasa-apod-github-readme
  labels:
    app: nasa-apod-github-readme
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nasa-apod-github-readme
