k8s/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasa-apod.onlivio.com
  namespace: nasa-apod-github-readme
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: nasa-apod.onlivio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nasa-apod-github-readme
            port:
              number: 80
  tls:
  - hosts:
    - nasa-apod.onlivio.com
    secretName: nasa-apod-onlivio-com-tls
